# telegram-bot-dosimeter

./: .coveragerc  .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  LICENSE  Makefile  README.md  admins.txt  bot.py  config.py  crypto.py  decoder.py  docker-compose.yml  handlers.py  mongodb.py  mypy.ini  public.pem  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  utilities.py
docker/: Dockerfile
dosimeter/: __init__.py  cache.py  callback.py  config.py  constants.py  crypto.py  decorators.py  geolocation.py  handler.py  keyboards.py  main.py  message_engine.py  messages.py  parser.py  utils.py
dosimeter/admin/: __init__.py  file.py  interface.py  memory.py
dosimeter/analytics/: __init__.py  decorators.py  measurement_protocol.py
dosimeter/api/: __init__.py  external.py  external_api.py  interface.py  interface_api.py
dosimeter/chart_engine/: __init__.py  chart.py
dosimeter/config/: .env.base  __init__.py  logger.py  settings.py
dosimeter/encryption/: __init__.py  asymmetric.py  interface.py  symmetric.py
dosimeter/handle/: __init__.py  handlers.py
dosimeter/handler/: __init__.py  handlers.py
dosimeter/navigator/: __init__.py  navigator.py
dosimeter/parse/: __init__.py  parser.py
dosimeter/parser/: __init__.py  parser.py
dosimeter/storage/: __init__.py  file.py  memory.py  mongo.py  mongodb.py  repository.py  schema.py
dosimeter/template_engine/: __init__.py  engine.py
dosimeter/templates/: add_or_delete_user.html  admin.html  count_of_users.html  donate.html  error_to_admin.html  error_to_user.html  greeting.html  help.html  list_of_admins.html  location.html  menu.html  radiation.html  region.html  show_keyboard.html  start.html  table.html  unknown.html
dosimeter/utils/: __init__.py  cache.py  decorators.py  file_manager.py  keyboards.py  utils.py
telegram_bot_dosimeter/: callback.py  config.py  constants.py  crypto.py  decorators.py  geolocation.py  keyboards.py  logging_config.py  main.py  messages.py  utils.py
telegram_bot_dosimeter/analytics/: measurement_protocol.py
telegram_bot_dosimeter/storage/: mongodb.py  repository.py
tests/: conftest.py  tasts_help.py  test_analytics.py  test_api.py  test_chart_engine.py  test_dosimeter.py  test_encryption.py  test_file_repository.py  test_geolocation.py  test_main.py  test_message_engine.py  test_navigator.py  test_parser.py  test_settings.py  test_telegram_bot_dosimeter.py  tests_get_html.py  tests_help.py  tests_messages.py  tests_radioactive_monitoring.py  tests_scraper.py  tests_start.py
tests/fixtures/: rad.html  rad.xml
tests/plugins/: analytics.py  encryption.py  parsing.py  storage.py
